--- a/src/telas/CadastroCorretor.form
+++ b/src/telas/CadastroCorretor.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -24,18 +24,18 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="233" max="-2" attributes="0"/>
-              <Component id="pnlDadosCorretor" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="323" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
+              <Component id="pnlDadosCorretor" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="77" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
               <Component id="pnlDadosCorretor" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+              <EmptySpace pref="65" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -47,30 +47,15 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblSenhaCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblCreciCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnSalvarCorretor" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                                  <Component id="btnLimparCorretor" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                                  <Component id="btnLimparCancelar" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="txtSenhaCorretor" min="-2" pref="216" max="-2" attributes="0"/>
-                                      <Component id="txtCreciCorretor" min="-2" pref="216" max="-2" attributes="0"/>
-                                      <Component id="txtSalarioCorretor" alignment="1" min="-2" pref="216" max="-2" attributes="0"/>
-                                      <Component id="txtTelefoneCorretor" alignment="1" min="-2" pref="216" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                          <Component id="lblSenhaCorretor" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="txtSenhaCorretor" min="-2" pref="216" max="-2" attributes="0"/>
+                              <Component id="txtSalarioCorretor" alignment="1" min="-2" pref="216" max="-2" attributes="0"/>
+                              <Component id="txtTelefoneCorretor" alignment="1" min="-2" pref="216" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="lblTelefoneCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -84,7 +69,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblDataDeNascimentoCorretor" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="txtDataDeNascimentoCorretor" pref="186" max="32767" attributes="0"/>
+                              <Component id="txtDataDeNascimentoCorretor" pref="187" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -98,15 +83,23 @@
                               </Group>
                           </Group>
                       </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                          <Component id="btnSalvarCorretor" min="-2" pref="71" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="btnLimparCorretor" min="-2" pref="71" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="btnVoltarTelaPrincipal" min="-2" pref="71" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="45" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblNomeCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtNomeCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -141,18 +134,13 @@
                       <Component id="lblSenhaCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtSenhaCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lblCreciCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCreciCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnLimparCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnLimparCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnVoltarTelaPrincipal" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnSalvarCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="27" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -193,11 +181,6 @@
             <Property name="text" type="java.lang.String" value="Senha:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCreciCorretor">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Creci Corretor: "/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JTextField" name="txtNomeCorretor">
         </Component>
         <Component class="javax.swing.JTextField" name="txtRgCorretor">
@@ -218,11 +201,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtSenhaCorretor">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtCreciCorretor">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCreciCorretorActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="btnSalvarCorretor">
           <Properties>
             <Property name="text" type="java.lang.String" value="Salvar"/>
@@ -239,12 +217,12 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparCorretorActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnLimparCancelar">
+        <Component class="javax.swing.JButton" name="btnVoltarTelaPrincipal">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Cancelar"/>
+            <Property name="text" type="java.lang.String" value="Voltar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparCancelarActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVoltarTelaPrincipalActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
