--- a/src/telas/ListarTransacoes.form
+++ b/src/telas/ListarTransacoes.form
@@ -88,12 +88,12 @@
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="valorTotalTransacoes" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="745" max="32767" attributes="0"/>
+                  <EmptySpace pref="574" max="32767" attributes="0"/>
               </Group>
               <Component id="jScrollPane3" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="655" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="496" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -108,7 +108,7 @@
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="valorTotalTransacoes" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="101" max="32767" attributes="0"/>
+                  <EmptySpace pref="99" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -117,7 +117,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="36" style="0"/>
+              <Font name="Roboto Mono" size="36" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Listagem de opera&#xe7;&#xf5;es realizadas"/>
           </Properties>
@@ -208,7 +208,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="36" style="0"/>
+              <Font name="Roboto Mono" size="36" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Valor total das transa&#xe7;&#xf5;es:"/>
           </Properties>
